[package]
name = "http-codegen"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[workspace]
members = ["codegen"]

[dependencies]
matchit = "0.5.0"
hyper = "0.14.19"
futures = "0.3.21"
static-opti = { git = "https://github.com/Virgiel/static-opti" }
hyper-utils = { git = "https://github.com/Virgiel/hyper-utils" }
duplicate = "0.4.0"
